Cleaned up small beauty mistakes